# vim2zed

./: .rules  README.md  dune-project  sw  zvim.opam
data/: example.vim
lib/: To.ml  dune  parse.ml  parse.mli  vim.ml  vim.mli  zed.ml  zed.mli
